# youtube-digest

./: .env.example  .gitignore  README.md  channels.example.yaml  install.sh  pyproject.toml  subscribers.example.yaml
deploy/templates/: cloudflared-config.yml.tpl  youtube-digest.service.tpl
docs/: DEPLOYMENT.md
templates/: email.html  form.html
youtube_digest/: __init__.py  __main__.py  config.py  models.py  pipeline.py  server.py
youtube_digest/delivery/: __init__.py  archive.py  email.py
youtube_digest/services/: __init__.py  feed.py  summarizer.py  transcript.py
youtube_digest/storage/: __init__.py  database.py  subscribers.py
