[project]
name = "youtube-digest"
version = "1.0.0"
description = "Automatically summarize YouTube videos and deliver email digests using any OpenAI-compatible LLM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Andrew Pond"}]
keywords = [
    "youtube",
    "summarizer",
    "email-digest",
    "llm",
    "openai",
    "transcript",
    "rss",
    "automation",
    "self-hosted",
    "video-summary",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "openai>=1.0.0",
    "youtube-transcript-api>=1.0.0",
    "feedparser>=6.0.0",
    "requests>=2.28.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.5.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "apscheduler>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/apond308/youtube-digest"
Repository = "https://github.com/apond308/youtube-digest"
Issues = "https://github.com/apond308/youtube-digest/issues"

[project.scripts]
youtube-digest = "youtube_digest.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["youtube_digest*"]
